-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b10
-
aarch32
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228916 | 12u-cpu | Boris Ulasevich | P3 | Resolved | Fixed | master |
| JDK-8222642 | 12.0.2 | Boris Ulasevich | P3 | Resolved | Fixed | b03 |
| JDK-8222864 | 11.0.4 | Boris Ulasevich | P3 | Resolved | Fixed | b01 |
| JDK-8247900 | openjdk8u272 | Boris Ulasevich | P3 | Resolved | Fixed | b01 |
JFR recording from arm32/x86_32 platform is unreadable. Problem is in jlong/intptr_t types mismatch on 32-bit systems.
- backported by
-
JDK-8222642 JFR: recordings on 32-bit systems unreadable
-
- Resolved
-
-
JDK-8222864 JFR: recordings on 32-bit systems unreadable
-
- Resolved
-
-
JDK-8228916 JFR: recordings on 32-bit systems unreadable
-
- Resolved
-
-
JDK-8247900 JFR: recordings on 32-bit systems unreadable
-
- Resolved
-
- relates to
-
JMC-6335 Liberica JVM generates unreadable JFR recordings.
-
- Resolved
-