8217647: JFR: recordings on 32-bit systems unreadable

Co-authored-by: Markus Gronlund <markus.gronlund@oracle.com>
Reviewed-by: egahlin